# embex

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: CLI.md  CONFIGURATION.md  MCP.md
docs/js/: main.js
embex/: __init__.py  config.py  mcp_server.py  sdk.py
embex/cli/: __init__.py  ask.py  diff.py  explain.py  ignore.py  init.py  log.py  memory.py  query.py  restore.py  search.py  serve_mcp.py  similar.py  stats.py  status.py  watch.py
embex/core/: __init__.py  auto_tagger.py  chunker.py  embedder.py  history_store.py  memory_store.py  rag.py  scanner.py  smart_chunker.py  vector_store.py  watcher.py
embex/utils/: __init__.py  compat.py  display.py  ignore.py  language.py
website/: index.html
website/css/: style.css
